--- a/style.css
+++ b/style.css
@@ -23,6 +23,8 @@ nav{
     border: none;
     margin-right: 25px;
     cursor: pointer;
+    font-size: 25px;
+    margin-left:25px ;
 }
 .span-menu{
     margin-left: 25px;
@@ -40,15 +42,17 @@ nav{
     color: black;
     text-decoration: none;
     font-weight: 600;
-    font-size: 20px;
+    font-size: 26px;
 }
 .btn-Login, .btn-register {
     height: auto;
-    padding: 8px 16px;
+    padding: 10px 20px;
     margin-left: 10px;
     cursor: pointer;
     border-radius: 25px;
     border: none;
+    font-size: 20px;
+    margin:  0 25px;
 }
 .btn-Login{
     color: black;
@@ -69,4 +73,94 @@ header{
     background-image: url(baner.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+   
+}
+.header-container h1{
+    font-size: 72px;
+    margin: 45px;
+}
+.order-container {
+    display: flex;
+    align-items: flex-start;
+    gap: 15px;
+}
+.input-container{
+ 
+ margin: 0;
+ margin-left: 25px;
+ background-color: white;
+ width: 100%;
+ border-radius: 10px;
+display: flex;
+justify-content: flex-start;
+align-items: center;
+height: 76px;
+
+}
+.input-container input{
+    border: none;
+    outline: none;
+    background-color: transparent;
+    font-size: 26px;
+}
+.input-container i{
+    font-size: 36px;
+    margin: 25px;
+    margin-right: 15px;
+    box-shadow: inset 0px -1px 0px #F3F3F3;;
+}
+.order-list-container{
+    
+    display: flex;
+    flex-direction: column;
+    
+    width: 30%;  
+
+}
+.order-list{
+    padding-left: 0;
+     background-color: white;
+    color: black;
+    width: 110%;
+    text-align: center;
+    height: 76px;  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 20px;
+    font-weight: 700;
+    cursor: pointer;
+    
+}
+.order-list:first-child{
+    border-bottom: 1px solid #d4d4d4;
+}
+.order-list:nth-child(2):hover,.order-list:nth-child(3):hover{
+    background-color: #F3F3F3;
+}
+.order-list i {
+    margin-right: 8px;
+}
+.hidden{
+    display: none;
+}
+.order-button{
+    height: 76px;
+    padding: 8px;
+    margin-left: 15px;
+    width: 40%;
+    color: white;
+    background-color: black;
+    font-size: 26px;
+    border-radius: 18px;
+    cursor: pointer;
+    &:hover{
+         background-color: rgb(65, 63, 63);
+    }
+}
+.span-dropdown{
+    margin-left: 15px;
 }
