--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ display: flex;
 justify-content: flex-start;
 align-items: center;
 height: 76px;
+position: relative;
 
 }
 .input-container input{
@@ -111,6 +112,21 @@ height: 76px;
     background-color: transparent;
     font-size: 26px;
     width: 100%;
+}
+.input-container::after{
+ content: '';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width:100%;
+    height: 0;
+    background-color: rgb(0, 132, 255);
+    border-bottom-left-radius:10px ;
+    border-bottom-right-radius:10px ;
+    transition: height 0.3s ease-in-out;
+}
+.input-container:has(input:focus)::after{
+   height: 4px;
 }
 .input-container i{
     font-size: 36px;
@@ -339,6 +355,9 @@ footer{
 }
 .medias-container{
     display: flex;
+}
+.medias i{
+    cursor: pointer;
 }
 .privacy-info{
     margin-top: 35px;
