--- a/style.css
+++ b/style.css
@@ -4,6 +4,16 @@
     box-sizing: border-box;
     font-family: Sans-serif;
 }
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    
+    z-index: 1;
+}
+.active{
+background-color: rgba(0,0,0,0.5);
+}
 
 nav{
     width: 100%;
