--- a/styles/header.css
+++ b/styles/header.css
@@ -9,7 +9,7 @@ header{
    
 }
 .header-container h1{
-    font-size: 72px;
+    font-size: 3.5em;
     margin: 45px;
 }
 .order-container {
@@ -27,7 +27,7 @@ header{
 display: flex;
 justify-content: flex-start;
 align-items: center;
-height: 76px;
+height: 20%;
 position: relative;
 
 }
@@ -54,7 +54,7 @@ position: relative;
    height: 4px;
 }
 .input-container i{
-    font-size: 36px;
+    font-size: 1.3em;
     margin: 25px;
     margin-right: 15px;
     box-shadow: inset 0px -1px 0px #F3F3F3;;
@@ -78,7 +78,7 @@ position: relative;
     align-items: center;
     justify-content: center;
     font-size: 20px;
-    font-weight: 700;
+    font-weight: 600;
     cursor: pointer;
     
 }
