--- a/styles/menu.css
+++ b/styles/menu.css
@@ -27,3 +27,13 @@
 .menu-block a{
     color: black;
 }
+ @media only screen and (max-width: 450px) {
+    .menu-container{
+        flex-direction: column;
+        align-items: center;
+        margin: 0 20px;
+    }
+    .menu-block{
+        width: 100%;
+    }
+}
