--- a/styles/nav.css
+++ b/styles/nav.css
@@ -7,6 +7,7 @@ nav{
     position: fixed;
     align-items: center;
     transition: background-color 0.2s ease-in-out;
+    z-index: 5;
 }
 .btn-menu{
     background-color: transparent;
@@ -64,5 +65,5 @@ nav{
 }
 .btn-location{
     display: none;
-    transition: display 0.8s ease-in-out;
+    transition: display 0.3s ease-in-out 1s;
 }
