--- a/styles/header.css
+++ b/styles/header.css
@@ -3,6 +3,7 @@ header{
     background-image: url(../img/baner.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -121,4 +122,114 @@ position: relative;
 .paragraph-Login a{
     
     color: black;
+}
+
+@media only screen and (max-width: 768px) {
+    header{
+        align-items: flex-start;
+        padding-top: 15vh;
+    }
+    
+    .header-container{
+        width: 100%;
+        padding: 0 20px;
+    }
+    
+    .header-container h1{
+        font-size: 2.5em;
+        margin: 25px 15px;
+    }
+    
+    .order-container{
+        flex-direction: column;
+        gap: 10px;
+        width: 100%;
+    }
+    
+    .input-container{
+        margin-left: 15px;
+        width: 95%;
+        height: 60px;
+    }
+    
+    .input-container input{
+        font-size: 18px;
+    }
+    
+    .input-container i{
+        margin: 15px;
+        font-size: 1.2em;
+    }
+    
+    .order-list-container{
+        width: 95%;
+        margin-left: 15px;
+    }
+    
+    .order-list{
+        width: 100%;
+        height: 60px;
+        font-size: 16px;
+    }
+    
+    .order-button{
+        width: 95%;
+        margin-left: 15px;
+        height: 60px;
+        font-size: 20px;
+    }
+    
+    .paragraph-Login{
+        font-size: 18px;
+        margin: 15px;
+    }
+}
+
+@media only screen and (max-width: 480px) {
+    header{
+        padding-top: 12vh;
+    }
+    
+    .header-container h1{
+        font-size: 2em;
+        margin: 20px 10px;
+    }
+    
+    .input-container{
+        margin-left: 10px;
+        width: 96%;
+        height: 55px;
+    }
+    
+    .input-container input{
+        font-size: 16px;
+    }
+    
+    .input-container i{
+        margin: 12px;
+        font-size: 1.1em;
+    }
+    
+    .order-list-container{
+        width: 96%;
+        margin-left: 10px;
+    }
+    
+    .order-list{
+        height: 55px;
+        font-size: 15px;
+    }
+    
+    .order-button{
+        width: 96%;
+        margin-left: 10px;
+        height: 55px;
+        font-size: 18px;
+        border-radius: 15px;
+    }
+    
+    .paragraph-Login{
+        font-size: 16px;
+        margin: 10px;
+    }
 }
