--- a/styles/menu.css
+++ b/styles/menu.css
@@ -27,13 +27,66 @@
 .menu-block a{
     color: black;
 }
- @media only screen and (max-width: 450px) {
+
+@media only screen and (max-width: 768px) {
+    .menu-container{
+        padding: 80px 20px;
+        gap: 30px;
+    }
+    
+    .menu-block{
+        width: 30%;
+        margin: 0;
+    }
+    
+    .menu-block h2{
+        font-size: 24px;
+        margin-bottom: 12px;
+    }
+    
+    .menu-block p{
+        font-size: 18px;
+    }
+}
+
+@media only screen and (max-width: 600px) {
     .menu-container{
         flex-direction: column;
         align-items: center;
-        margin: 0 20px;
+        padding: 60px 20px;
+        gap: 40px;
     }
+    
+    .menu-block{
+        width: 85%;
+        margin: 0;
+    }
+    
+    .menu-block h2{
+        font-size: 26px;
+        margin-bottom: 15px;
+    }
+    
+    .menu-block p{
+        font-size: 20px;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .menu-container{
+        padding: 50px 15px;
+        gap: 35px;
+    }
+    
     .menu-block{
         width: 100%;
+    }
+    
+    .menu-block h2{
+        font-size: 24px;
+    }
+    
+    .menu-block p{
+        font-size: 18px;
     }
 }
