--- a/styles/nav.css
+++ b/styles/nav.css
@@ -8,6 +8,7 @@ nav{
     align-items: center;
     transition: background-color 0.2s ease-in-out;
     z-index: 5;
+    background-color: rgb(226, 240, 252);
 }
 .btn-menu{
     background-color: transparent;
