--- a/styles/style.css
+++ b/styles/style.css
@@ -3,66 +3,11 @@
 @import url(countries.css);
 @import url(header.css);
 @import url(menu.css);
+@import url(overlay.css);
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Sans-serif;
 }
-.overlay{
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    display: none;
-    z-index: -1;
-}
-.active{
-background-color: rgba(0,0,0,0.5);
-display: block;
-z-index: 1;
-}
-.overlay-content{
-    position: fixed;
-    top: 15%;
-    left: 40%;
-    background-color: #F3F3F3;
-    padding: 24px;
-    width: 25%;
-    height: 35%;
-    border-radius: 25px;
-}
 
-@media only screen and (max-width: 768px) {
-    .overlay-content{
-        top: 20%;
-        left: 10%;
-        width: 80%;
-        height: auto;
-        min-height: 40%;
-        padding: 20px;
-    }
-}
-
-@media only screen and (max-width: 480px) {
-    .overlay-content{
-        top: 15%;
-        left: 5%;
-        width: 90%;
-        padding: 18px;
-        border-radius: 20px;
-    }
-    
-    .overlay-content h2{
-        font-size: 1.5em;
-    }
-    
-    .overlay-content button{
-        font-size: 16px;
-        padding: 12px;
-    }
-    
-    .overlay-content select{
-        font-size: 16px;
-        padding: 10px;
-    }
-}
