--- a/styles/style.css
+++ b/styles/style.css
@@ -4,6 +4,7 @@
 @import url(header.css);
 @import url(menu.css);
 @import url(overlay.css);
+@import url(sidebar.css);
 *{
     margin: 0;
     padding: 0;
