--- a/styles/nav.css
+++ b/styles/nav.css
@@ -8,7 +8,7 @@ nav{
     align-items: center;
     transition: background-color 0.2s ease-in-out;
     z-index: 5;
-    background-color: white;
+    background-color: transparent;
 }
 .btn-menu{
     background-color: transparent;
