--- a/styles/menu.css
+++ b/styles/menu.css
@@ -32,6 +32,7 @@
     .menu-container{
         padding: 80px 20px;
         gap: 30px;
+        
     }
     
     .menu-block{
@@ -53,6 +54,7 @@
     .menu-container{
         padding: 50px 15px;
         gap: 35px;
+        flex-direction: column;
     }
     
     .menu-block{
