--- a/styles/overlay.css
+++ b/styles/overlay.css
@@ -131,19 +131,24 @@
 
 @media only screen and (max-width: 768px) {
     .overlay-content {
-        top: 20%;
-        left: 10%;
-        width: 80%;
-        height: auto;
+       position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
         padding: 24px;
+        border-radius: 0;
     }
+    .input-adres-container{
+        height: auto;
+    } 
 }
 
 @media only screen and (max-width: 480px) {
     .overlay-content {
-        top: 15%;
-        left: 5%;
-        width: 90%;
+       
+        width: 100%;
+        height: 100vh;
         padding: 18px;
         border-radius: 20px;
     }
