--- a/styles/overlay.css
+++ b/styles/overlay.css
@@ -142,6 +142,10 @@
     .input-adres-container{
         height: auto;
     } 
+    .overlay-order{
+        display: flex;
+        flex-direction: column;
+    }
 }
 
 @media only screen and (max-width: 480px) {
