--- a/styles/nav.css
+++ b/styles/nav.css
@@ -68,7 +68,34 @@ nav{
     display: none;
     transition: display 0.3s ease-in-out 1s;
 }
-
+.location-input{
+    width: 100%;
+    height: 10vh;
+    position: fixed;
+   display: none;
+   background-color: white;
+   z-index: 3;
+}
+.input-container-navbar{
+    display: flex;
+    height: 100%;
+        justify-content: center;
+    align-items: center;
+}
+.input-container-navbar-content{
+    background-color: rgb(241, 236, 231);
+    width: 100%;
+    margin: 0 35px;
+    padding: 10px 25px;
+    font-size: 1.3em;
+    font-weight: 600;
+    border-radius: 10px;
+}
+.input-container-navbar-content input{
+    border: none;
+    outline: none;
+    background-color: transparent;
+}
 @media only screen and (max-width: 768px) {
     nav{
         height: 9vh;
