--- a/styles/app-section.css
+++ b/styles/app-section.css
@@ -1,4 +1,9 @@
 .app-section{
+    display: none;
+}
+
+@media only screen and (max-width: 768px){
+.app-section{
     width: 100%;
     padding:  15px;
     padding-top: 25px;
@@ -25,4 +30,5 @@
     border-radius: 5px;
     cursor: pointer;
     margin-top: 20px;
+}
 }
