--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,113 +1,133 @@
-footer{
+footer {
     width: 100%;
     height: auto;
 }
-.informations, .privacy{
+
+.informations,
+.privacy {
     padding-left: 20%;
     padding-right: 20%;
 }
 
-.informations{
+.informations {
     border-top: 1px solid #ecebeb;
     border-bottom: 1px solid #ecebeb;
-    
+
     display: flex;
 }
-.informations img{
+
+.informations img {
     height: 150px;
     width: 250px;
 }
-.download-apps{
+
+.download-apps {
     display: flex;
 }
-.logos{
+
+.logos {
     height: auto;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     margin-bottom: 35px;
 }
-.logos img{
+
+.logos img {
     cursor: pointer;
 }
-.download-apps img{
+
+.download-apps img {
     width: 120px;
     height: 70px;
-     
-}
-.info-list{
-   display: flex;
+
 }
 
-.info-list-container{
+.info-list {
+    display: flex;
+}
+
+.info-list-container {
     display: flex;
     align-items: center;
     margin-left: 30%;
 }
-.info-list{
+
+.info-list {
     margin: 15px;
 }
-.info-list li{
+
+.info-list li {
     list-style-type: none;
     font-size: 1.4em;
-   margin-bottom: 24px;
-     &:hover{
+    margin-bottom: 24px;
+
+    &:hover {
         cursor: pointer;
         text-decoration: underline;
-     }
+    }
 }
 
-.privacy{
+.privacy {
     height: 20vh;
     margin-top: 30px;
 }
-.privacy i{
+
+.privacy i {
     font-size: 30px;
     margin-left: 20px;
     margin-right: 15px;
 }
-.privacy-links a{
+
+.privacy-links a {
     margin-right: 15px;
     cursor: pointer;
     font-size: 17px;
-   &:hover{
-    text-decoration: underline;
-   }
-   
+
+    &:hover {
+        text-decoration: underline;
+    }
+
 }
-.medias-container{
+
+.medias-container {
     display: flex;
-  
+
 }
-.medias{
+
+.medias {
     display: flex;
 }
-.medias i{
+
+.medias i {
     cursor: pointer;
 }
-.privacy-info{
+
+.privacy-info {
     margin-top: 35px;
     font-size: 25px;
     display: flex;
 }
-.privacy-info a:hover{
+
+.privacy-info a:hover {
     cursor: pointer;
     text-decoration: underline;
 }
 
 @media only screen and (max-width: 768px) {
-    footer{
+    footer {
         height: auto;
         min-height: 55vh;
         background-color: #f6f6f6;
     }
-    
-    .informations, .privacy{
+
+    .informations,
+    .privacy {
         padding-left: 4%;
         padding-right: 4%;
     }
-    
-    .informations{
+
+    .informations {
         flex-direction: column;
         gap: 25px;
         height: auto;
@@ -115,80 +135,80 @@ footer{
         padding-bottom: 40px;
         border-top: none;
     }
-    
-    .logos{
+
+    .logos {
         margin-bottom: 0;
         gap: 15px;
     }
-    
-    
-    
-    .download-apps{
+
+
+
+    .download-apps {
         flex-direction: row;
         gap: 10px;
     }
-    
-    .download-apps img{
+
+    .download-apps img {
         width: 135px;
         height: 45px;
         margin-left: 0;
     }
-    
-    .info-list-container{
+
+    .info-list-container {
         margin-left: 0;
         flex-direction: column;
         align-items: flex-start;
         width: 100%;
         gap: 30px;
     }
-    
-    .info-list{
+
+    .info-list {
         margin: 0;
         width: 100%;
     }
-    
-    .info-list li{
+
+    .info-list li {
         font-size: 16px;
         margin-bottom: 20px;
         font-weight: 400;
     }
-    
-    .privacy{
+
+    .privacy {
         height: auto;
         padding-bottom: 30px;
         margin-top: 40px;
     }
-    
-    .privacy i{
+
+    .privacy i {
         font-size: 24px;
         margin-left: 0;
         margin-right: 15px;
     }
-    
-    .medias{
+
+    .medias {
         display: flex;
         gap: 5px;
         margin-bottom: 30px;
     }
-    
-    .medias-container{
+
+    .medias-container {
         flex-direction: column;
         gap: 25px;
     }
-    
-    .privacy-links{
+
+    .privacy-links {
         display: flex;
         flex-direction: column;
         gap: 15px;
     }
-    
-    .privacy-links a{
+
+    .privacy-links a {
         font-size: 14px;
         margin-right: 0;
         color: #545454;
     }
-    
-    .privacy-info{
+
+    .privacy-info {
         font-size: 12px;
         margin-top: 25px;
         flex-direction: column;
@@ -196,38 +216,38 @@ footer{
         color: #545454;
         line-height: 1.5;
     }
-    
-    .reCAPTCHA-info{
+
+    .reCAPTCHA-info {
         display: block;
         margin-bottom: 10px;
     }
 }
 
 @media only screen and (max-width: 480px) {
-    .informations{
+    .informations {
         padding-top: 35px;
         padding-bottom: 35px;
     }
-    
-    .download-apps img{
+
+    .download-apps img {
         width: 130px;
         height: 43px;
     }
-    
-    .info-list li{
+
+    .info-list li {
         font-size: 15px;
         margin-bottom: 18px;
     }
-    
-    .privacy i{
+
+    .privacy i {
         font-size: 22px;
     }
-    
-    .privacy-links a{
+
+    .privacy-links a {
         font-size: 13px;
     }
-    
-    .privacy-info{
+
+    .privacy-info {
         font-size: 11px;
     }
 }
