--- a/styles/nav.css
+++ b/styles/nav.css
@@ -1,4 +1,4 @@
-nav{
+nav {
     width: 100%;
     background-color: transparent;
     height: 7vh;
@@ -10,37 +10,48 @@ nav{
     z-index: 5;
     background-color: transparent;
 }
-.btn-menu{
+
+.btn-menu {
     background-color: transparent;
     border-radius: 50%;
     border: none;
     margin-right: 25px;
     cursor: pointer;
     font-size: 25px;
-    margin-left:25px ;
-    &:hover{
-    box-shadow: -1px 5px 47px 0px rgba(0,0,0,0.75);
+    margin-left: 25px;
+
+    &:hover {
+        box-shadow: -1px 5px 47px 0px rgba(0, 0, 0, 0.75);
     }
 }
-.span-menu{
+
+.span-menu {
     margin-left: 25px;
 }
-.span-register{
+
+.span-register {
     margin-right: 25px;
-    
+
 }
-.span-menu, .span-register {
+
+.span-menu,
+.span-register {
     display: flex;
     align-items: center;
     height: 100%;
 }
-.span-menu a, .span-register a{
+
+.span-menu a,
+.span-register a {
     color: black;
     text-decoration: none;
     font-weight: 600;
     font-size: 26px;
 }
-.btn-Login, .btn-register,.btn-location {
+
+.btn-Login,
+.btn-register,
+.btn-location {
     height: auto;
     padding: 10px 20px;
     margin-left: 10px;
@@ -48,41 +59,50 @@ nav{
     border-radius: 25px;
     border: none;
     font-size: 20px;
-    margin:  0 25px;
+    margin: 0 25px;
 }
-.btn-Login{
+
+.btn-Login {
     color: black;
-    background-color: white ;
-    &:hover{
+    background-color: white;
+
+    &:hover {
         background-color: rgb(235, 227, 227);
     }
 }
-.btn-register, .btn-location{
+
+.btn-register,
+.btn-location {
     color: white;
     background-color: black;
-    &:hover{
+
+    &:hover {
         background-color: rgb(65, 63, 63);
     }
 }
-.btn-location{
+
+.btn-location {
     display: none;
     transition: display 0.3s ease-in-out 1s;
 }
-.location-input{
+
+.location-input {
     width: 100%;
     height: 10vh;
     position: fixed;
-   display: none;
-   background-color: white;
-   z-index: 3;
+    display: none;
+    background-color: white;
+    z-index: 3;
 }
-.input-container-navbar{
+
+.input-container-navbar {
     display: flex;
     height: 100%;
-        justify-content: center;
+    justify-content: center;
     align-items: center;
 }
-.input-container-navbar-content{
+
+.input-container-navbar-content {
     background-color: rgb(241, 236, 231);
     width: 100%;
     margin: 0 35px;
@@ -91,99 +111,108 @@ nav{
     font-weight: 600;
     border-radius: 10px;
 }
-.input-container-navbar-content input{
+
+.input-container-navbar-content input {
     border: none;
     outline: none;
     background-color: transparent;
 }
 
 @media only screen and (max-width: 1024px) {
-    .register-buttons{
+    .register-buttons {
 
         display: flex;
-        
+
     }
-    .span-register a{
-      font-size: 1em;
-      margin-right: 5px;
+
+    .span-register a {
+        font-size: 1em;
+        margin-right: 5px;
     }
-    nav{
+
+    nav {
         height: 9vh;
         padding: 0 10px;
         position: absolute;
         background-color: transparent !important;
     }
-    
+
 }
+
 @media only screen and (max-width: 768px) {
-    nav{
+    nav {
         height: 9vh;
         padding: 0 10px;
         position: absolute;
         background-color: transparent !important;
     }
-    
-    .span-menu{
+
+    .span-menu {
         margin-left: 10px;
     }
-    
-    
-    .span-register{
+
+
+    .span-register {
         margin-right: 10px;
-        
+
     }
-    
-    .span-menu a{
+
+    .span-menu a {
         font-size: 20px;
     }
-    
-    .span-register a{
+
+    .span-register a {
         font-size: 1.2em;
     }
-    
-    .btn-Login, .btn-register, .btn-location {
+
+    .btn-Login,
+    .btn-register,
+    .btn-location {
         font-size: 16px;
         padding: 8px 14px;
         margin: 0 8px;
     }
-    .btn-location{
+
+    .btn-location {
         display: none !important;
     }
-    
-    .btn-menu{
+
+    .btn-menu {
         margin-left: 10px;
         margin-right: 15px;
     }
 }
 
 @media only screen and (max-width: 480px) {
-    nav{
+    nav {
         height: 10vh;
     }
-    
-    .span-menu a{
+
+    .span-menu a {
         font-size: 18px;
     }
-    
-  .span-register a{
+
+    .span-register a {
         font-size: 1.2em;
     }
-    
-    .btn-Login{
+
+    .btn-Login {
         font-size: 14px;
         padding: 6px 12px;
         margin: 0 5px;
     }
-    
-    .btn-menu{
+
+    .btn-menu {
         font-size: 20px;
         margin-left: 5px;
         margin-right: 10px;
     }
+
     .span-register {
         flex-direction: column-reverse;
     }
-    .btn-location{
+
+    .btn-location {
         font-size: 14px;
         padding: 6px 10px;
     }
