--- a/styles/overlay.css
+++ b/styles/overlay.css
@@ -1,4 +1,3 @@
-
 .overlay {
     width: 100%;
     height: 100%;
@@ -9,7 +8,7 @@
 }
 
 .active {
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     display: block;
     z-index: 100;
 }
@@ -32,23 +31,25 @@
     justify-content: space-between;
 }
 
-.overlay-location-header h2, 
+.overlay-location-header h2,
 .overlay-order h2 {
     font-size: 2.5em
 }
 
 
-.overlay-location, 
-.overlay-order { 
-    
+.overlay-location,
+.overlay-order {
+
     display: none;
 }
-.overlay-order-content{
+
+.overlay-order-content {
     margin: 10px;
     display: flex;
-        flex-direction: column;
+    flex-direction: column;
 }
-.overlay-order-select{
+
+.overlay-order-select {
     padding: 25px;
     outline: none;
     border: none;
@@ -61,7 +62,7 @@
 
 
 
-.overlay-order-content button{
+.overlay-order-content button {
     border-radius: 10px;
     padding: 15px;
     font-weight: 600;
@@ -69,23 +70,26 @@
     cursor: pointer;
 
 }
-.overlay-order-plan{
+
+.overlay-order-plan {
     background-color: black;
     color: white;
-    &:hover{
+
+    &:hover {
         background-color: rgb(65, 63, 63);
     }
 }
-.overlay-order-now{
+
+.overlay-order-now {
     background-color: white;
     color: black;
-     
-    &:hover{
+
+    &:hover {
         background-color: rgb(238, 233, 233);
     }
 }
 
-.overlay-location-cancel, 
+.overlay-location-cancel,
 .overlay-order-cancel {
     border: none;
     padding: 5px;
@@ -96,7 +100,7 @@
 
 .overlay-location-cancel:hover,
 .overlay-order-cancel:hover {
-    box-shadow: -1px 3px 47px 0px rgba(0,0,0,0.75);
+    box-shadow: -1px 3px 47px 0px rgba(0, 0, 0, 0.75);
 }
 
 
@@ -127,15 +131,16 @@
     font-size: 1.3em;
     margin-right: 5px;
 }
-@media only screen and (max-width: 1024px){
-    .overlay-content{
+
+@media only screen and (max-width: 1024px) {
+    .overlay-content {
         width: 35%;
     }
 }
 
 @media only screen and (max-width: 768px) {
     .overlay-content {
-       position: fixed;
+        position: fixed;
         top: 0;
         left: 0;
         width: 100%;
@@ -143,30 +148,31 @@
         padding: 24px;
         border-radius: 0;
     }
-    .input-adres-container{
+
+    .input-adres-container {
         height: auto;
-    } 
-    
+    }
+
 }
 
 @media only screen and (max-width: 480px) {
     .overlay-content {
-       
+
         width: 100%;
         height: 100vh;
         padding: 18px;
         border-radius: 20px;
     }
-    
+
     .overlay-content h2 {
         font-size: 1.5em;
     }
-    
+
     .overlay-content button {
         font-size: 16px;
         padding: 12px;
     }
-    
+
     .overlay-content select {
         font-size: 16px;
         padding: 10px;
