--- a/styles/app-section.scss
+++ b/styles/app-section.scss
@@ -1,37 +1,36 @@
 .app-section {
     display: none;
-}
 
-@media only screen and (max-width: 1024px) {
-    .app-section {
+    @media only screen and (max-width: 1024px) {
         width: 100%;
         padding: 15px;
         padding-top: 25px;
         display: flex;
         flex-direction: column;
-    }
 
-    .app-section img {
-        width: 75px;
-        height: 75px;
-    }
+        img {
+            width: 75px;
+            height: 75px;
+        }
 
-    .app-section-content {
-        display: flex;
-        align-items: center;
-    }
+        &-content {
+            display: flex;
+            align-items: center;
+        }
 
-    .app-section-content p {
-        font-weight: 550;
-        font-size: 1.3em;
-    }
+        &-content p {
+            font-weight: 550;
+            font-size: 1.3em;
+        }
 
-    .app-button-download {
-        outline: none;
-        border: none;
-        padding: 15px 25px;
-        border-radius: 5px;
-        cursor: pointer;
-        margin-top: 20px;
+        .app-button-download {
+            outline: none;
+            border: none;
+            padding: 15px 25px;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-top: 20px;
+        }
+
     }
 }
