--- a/styles/countries.scss
+++ b/styles/countries.scss
@@ -4,145 +4,135 @@
     margin: 0 5%;
     margin-bottom: 80px;
 
-}
-
-.towns-header,
-.countries-header {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-end;
-
-}
-
-.towns-header h2,
-.countries-header h2 {
-    font-weight: 700;
-    font-size: 52px;
-    margin-bottom: 20px;
-
-
-}
-
-.towns-header a,
-.countries-header a {
-    color: black;
-    font-size: 28px;
-}
-
-.map-container {
-    width: 100%;
-    margin-top: 20px;
-}
-
-.towns-list {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(6, 1fr);
-    gap: 30px;
-    font-size: 23px;
-    margin-top: 25px;
-    grid-auto-flow: column;
-
-
-
-}
-
-.town,
-.country {
-    cursor: pointer;
-}
-
-.countries-list {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(8, 1fr);
-    gap: 30px;
-    font-size: 23px;
-    margin-top: 25px;
-    grid-auto-flow: column;
-}
-
-@media only screen and (max-width: 768px) {
-
-    .towns-section,
-    .countries-section {
+    @media only screen and (max-width: 768px) {
         margin: 0 5%;
         margin-bottom: 50px;
     }
 
-    .towns-header,
-    .countries-header {
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 10px;
-    }
-
-    .towns-header h2,
-    .countries-header h2 {
-        font-size: 28px;
-        margin-bottom: 5px;
-        font-weight: 700;
-    }
-
-    .towns-header a,
-    .countries-header a {
-        font-size: 16px;
-        text-decoration: underline;
-    }
-
-    .map-container {
-        height: 300px;
-        margin-top: 15px;
-    }
-
-    .towns-list {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: auto;
-        gap: 20px 40px;
-        font-size: 16px;
-        margin-top: 20px;
-        grid-auto-flow: row;
-    }
-
-    .countries-list {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: auto;
-        gap: 20px 40px;
-        font-size: 16px;
-        margin-top: 20px;
-        grid-auto-flow: row;
-    }
-}
-
-@media only screen and (max-width: 480px) {
-
-    .towns-section,
-    .countries-section {
+    @media only screen and (max-width: 480px) {
         margin: 0 4%;
         margin-bottom: 40px;
     }
 
-    .towns-header h2,
-    .countries-header h2 {
-        font-size: 24px;
-    }
+    .towns-header,
+    .countries-header {
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
 
-    .towns-header a,
-    .countries-header a {
-        font-size: 15px;
+        @media only screen and (max-width: 768px) {
+            flex-direction: column;
+            align-items: flex-start;
+            gap: 10px;
+        }
+
+        h2 {
+            font-weight: 700;
+            font-size: 52px;
+            margin-bottom: 20px;
+
+            @media only screen and (max-width: 768px) {
+                font-size: 28px;
+                margin-bottom: 5px;
+                font-weight: 700;
+            }
+
+            @media only screen and (max-width: 480px) {
+                font-size: 24px;
+            }
+
+        }
+
+        a {
+            color: black;
+            font-size: 28px;
+
+            @media only screen and (max-width: 768px) {
+                font-size: 16px;
+                text-decoration: underline;
+            }
+
+            @media only screen and (max-width: 480px) {
+
+                font-size: 15px;
+            }
+
+        }
     }
 
     .map-container {
-        height: 250px;
+        width: 100%;
+        margin-top: 20px;
+
+        @media only screen and (max-width: 768px) {
+            height: 300px;
+            margin-top: 15px;
+        }
+
+        @media only screen and (max-width: 480px) {
+            height: 250px;
+        }
+
     }
 
     .towns-list {
-        gap: 18px 30px;
-        font-size: 15px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(6, 1fr);
+        gap: 30px;
+        font-size: 23px;
+        margin-top: 25px;
+        grid-auto-flow: column;
+
+        @media only screen and (max-width: 768px) {
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: auto;
+            gap: 20px 40px;
+            font-size: 16px;
+            margin-top: 20px;
+            grid-auto-flow: row;
+        }
+
+        @media only screen and (max-width: 480px) {
+
+            gap: 18px 30px;
+            font-size: 15px;
+        }
+
+        .town,
+        .country {
+            cursor: pointer;
+        }
     }
 
     .countries-list {
-        gap: 18px 30px;
-        font-size: 15px;
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: repeat(8, 1fr);
+        gap: 30px;
+        font-size: 23px;
+        margin-top: 25px;
+        grid-auto-flow: column;
+
+        @media only screen and (max-width: 768px) {
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: auto;
+            gap: 20px 40px;
+            font-size: 16px;
+            margin-top: 20px;
+            grid-auto-flow: row;
+        }
+
+        @media only screen and (max-width: 480px) {
+
+
+            gap: 18px 30px;
+            font-size: 15px;
+        }
+
+        .town,
+        .country {
+            cursor: pointer;
+        }
     }
 }
